--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "^8.0.0",
     "@fastify/postgres": "^5.2.2",
     "fastify": "^4.26.1",
     "pg": "^8.11.3"
-  }
+  },
+  "description": ""
 }
